// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scoping > should scope for attribute selectors 1`] = `
"import { useSolidStyled as _useSolidStyled } from \\"solid-styled\\";
import { createCSSVars as _createCSSVars } from \\"solid-styled\\";
import { css } from 'solid-styled';
const _sheet = \\"c-f0b3b6fa-0\\";
const _css = \\"[id][s\\\\\\\\:c-f0b3b6fa-0]{color:red}\\";
export default function Example() {
  const _vars = _createCSSVars();
  _useSolidStyled(_sheet, 1, _css);
  return <h1 id=\\"example\\" s:c-f0b3b6fa-0 style={_vars()}>Hello World</h1>;
}"
`;

exports[`scoping > should scope for class selectors 1`] = `
"import { useSolidStyled as _useSolidStyled } from \\"solid-styled\\";
import { createCSSVars as _createCSSVars } from \\"solid-styled\\";
import { css } from 'solid-styled';
const _sheet = \\"c-f0b3b6fa-0\\";
const _css = \\".example[s\\\\\\\\:c-f0b3b6fa-0]{color:red}\\";
export default function Example() {
  const _vars = _createCSSVars();
  _useSolidStyled(_sheet, 1, _css);
  return <h1 class=\\"example\\" s:c-f0b3b6fa-0 style={_vars()}>Hello World</h1>;
}"
`;

exports[`scoping > should scope for id selectors 1`] = `
"import { useSolidStyled as _useSolidStyled } from \\"solid-styled\\";
import { createCSSVars as _createCSSVars } from \\"solid-styled\\";
import { css } from 'solid-styled';
const _sheet = \\"c-f0b3b6fa-0\\";
const _css = \\"#example[s\\\\\\\\:c-f0b3b6fa-0]{color:red}\\";
export default function Example() {
  const _vars = _createCSSVars();
  _useSolidStyled(_sheet, 1, _css);
  return <h1 id=\\"example\\" s:c-f0b3b6fa-0 style={_vars()}>Hello World</h1>;
}"
`;

exports[`scoping > should scope for type selectors 1`] = `
"import { useSolidStyled as _useSolidStyled } from \\"solid-styled\\";
import { createCSSVars as _createCSSVars } from \\"solid-styled\\";
import { css } from 'solid-styled';
const _sheet = \\"c-f0b3b6fa-0\\";
const _css = \\"h1[s\\\\\\\\:c-f0b3b6fa-0]{color:red}\\";
export default function Example() {
  const _vars = _createCSSVars();
  _useSolidStyled(_sheet, 1, _css);
  return <h1 s:c-f0b3b6fa-0 style={_vars()}>Hello World</h1>;
}"
`;

exports[`scoping > should scope for universal selectors 1`] = `
"import { useSolidStyled as _useSolidStyled } from \\"solid-styled\\";
import { createCSSVars as _createCSSVars } from \\"solid-styled\\";
import { css } from 'solid-styled';
const _sheet = \\"c-f0b3b6fa-0\\";
const _css = \\"[s\\\\\\\\:c-f0b3b6fa-0]{color:red}\\";
export default function Example() {
  const _vars = _createCSSVars();
  _useSolidStyled(_sheet, 1, _css);
  return <h1 s:c-f0b3b6fa-0 style={_vars()}>Hello World</h1>;
}"
`;
